# BA_Matlab

./: README.md
BATestSuite/: func_create_dataset.m  func_dist_kc.m  func_eval_residual.m  func_get_rot_matrix.m  func_plot_cameras.m  func_plot_dataset.m  func_ptdepth.m  func_readwrite_BA_problem.m  func_render_view.m  func_reproject_BAtest.m  func_reproject_VP_BAtest.m  func_rodrigues.m  func_undist_kc.m  run_BA_TestSuite.m
src/: BAdjust.h  BAdjust_parser.hxx  BAproblem_test.txt  CMakeLists.txt  CeresBA.h  CeresBA.hxx  Parser.h  Parser.hxx  ParserMex.h  ParserMex.hxx  ceresBA_datastruct.h  ceresBAbin.cpp  ceresBAmex.cpp  ceresBAmex.h  mex_link.sh  mex_stub.cpp  residual.h  resutil.h
